AFinalDevops-January-2023-main/kubernetes/Network Policy/network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
