AFinalDevops-January-2023-main/kubernetes/Network Policy/np_from_specific_pods.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-all
spec:
  podSelector:
    matchLabels:
      app: backed
  policyTypes:
  - Ingress
  Ingress: 
    - from: 
        podSelector: 
          matchLabels:   
            app: frontend   
    ports: 
    - protocol: tcp 
      port: 80
